# mdopendata

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  LICENSE  POSTGIS-MCP.md  QGIS-MCP.md  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.lock.txt
.codex/: codex.json  mcp.json
docs/: architecture.md  normalized-land-use-standard.md  requirements-local-gis.md
plan/: chalottetown-draft-zoning-final-qa-summary.md  chalottetown-draft-zoning-issue-ledger.csv  chalottetown-draft-zoning-plan.md  chalottetown-draft-zoning-timeline.md  charlottetown-draft-zoning-validation-rebaseline-timeline.md  charlottetown-unified-zoning-ingestion-timeline.md
schema/: 001_zoning_schema.sql  002_zoning_views.sql  normalized_land_use_bundle.schema.json
scripts/: apply-charlottetown-draft-zoning-manual-corrections.py  apply-postgis-schema.ps1  check-bedford-conservation.py  check-postgis.ps1  create-charlottetown-current-zoning-parcel-review.py  discover-charlottetown-code-table-candidates.py  export-charlottetown-section-equivalence-review.py  extract-beaverbank-hammondsplains-uppersackville-land-use-bylaw.py  extract-beaverbank-hammondsplains-uppersackville-mps.py  extract-bedford-land-use-bylaw.py  extract-bedford-mps.py  extract-charlottetown-draft-map-layers.py  extract-charlottetown-draft-zoning-bylaw.py  extract-charlottetown-zoning-bylaw.py  extract-charlottetown-zoning-map-raster-gpkg.py  extract-cole-harbour-westphal-land-use-bylaw.py  extract-cole-harbour-westphal-mps.py  extract-dartmouth-land-use-bylaw.py  extract-dartmouth-mps.py  (+19 more)
(+844 files in other folders)
