[project]
name = "mdopendata"
version = "0.1.0"
description = "Spatial land-use and municipal open-data extraction, normalization, and validation workflows."
requires-python = ">=3.14"
dependencies = [
  "geoalchemy2>=0.19,<0.20",
  "geopandas>=1.1,<2",
  "jsonschema>=4.26,<5",
  "numpy>=2.4,<3",
  "opencv-python>=4.13,<5",
  "pandas>=3.0,<4",
  "pdfplumber>=0.11,<0.12",
  "pillow>=12.2,<13",
  "psycopg[binary]>=3.3,<4",
  "pymupdf>=1.27,<2",
  "pyogrio>=0.12,<0.13",
  "pypdf>=6.10,<7",
  "pyproj>=3.7,<4",
  "python-dateutil>=2.9,<3",
  "rapidfuzz>=3.14,<4",
  "rasterio>=1.5,<2",
  "shapely>=2.1,<3",
  "sqlalchemy>=2.0,<3",
]
